# CatalystEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CatalystEngine.sln  CatalystEngine.vcxproj  CatalystEngine.vcxproj.filters  README.md  azure-pipelines.yml
Source/Editor/Tools/: Command.h  Console.cpp  Console.h
Source/Engine/: CatalystEngine.cpp  CatalystEngine.h
Source/Engine/ApplicationEntry/: main.cpp
Source/Engine/Input/: InputManager.cpp  InputManager.h
Source/Engine/Memory/: newoverload.cpp
Source/Engine/Renderer/: CatalystRenderer.cpp  CatalystRenderer.h
Source/Engine/Renderer/Editor/: ImGuiRenderer.cpp  ImGuiRenderer.h
Source/Engine/Subsystem/: Subsystem.cpp  Subsystem.h
Source/Engine/Time/: Timer.cpp  Timer.h  TimerHandle.h  TimerManager.cpp  TimerManager.h
